added changes to _site.yml and index

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Index</title>
+<title>Dongho Choi</title>
 
 <script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -327,12 +327,10 @@ $(document).ready(function () {
 <link rel="stylesheet" href="site_libs/academicons-1.9.1/css/academicons.min.css"/></p>
 <p><br></p>
 <p align="center">
-<img src="images/profile_pic.jpg" style="width:30%; border:0.5px solid; margin-right: 20px" align="center">
+<img src="images/profile_pic.jpg" style="width:80%; border:0.5px solid; margin-right: 20px" align="center">
 </p>
 <p><br></p>
-<p>🚨<em>THIS IS A FICTIONAL PROFILE MEANT AS AN EXAMPLE FOR THE
-STEPBYSTAT COMMUNITY.</em> <br><br><br> 👋🏽 Hello, my name is John
-Appleseed.</p>
+<p>👋 Hello, my name is Dongho Choi. Please call me Tom.</p>
 <p>🎓 Soon to be grad with a M.S. in Data Science at ABC University.
 (May 2022)</p>
 <p>🌇 New York City Native, with a passion for developing and applying
