edit index, delete publication, add research

--- a/research.html
+++ b/research.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Publication</title>
+<title>Research</title>
 
 <script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -334,7 +334,7 @@ div.tocify {
   <a href="tutorials.html">Tutorials</a>
 </li>
 <li>
-  <a href="publication.html">Publication</a>
+  <a href="research.html">Research</a>
 </li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -408,45 +408,93 @@ div.tocify {
 <!-- navbar added -->
 <p><link rel="stylesheet" href="styles.css" type="text/css">
 <link rel="stylesheet" href="site_libs/academicons-1.9.1/css/academicons.min.css"/></p>
-<p><br><br><br></p>
-<div id="squid-game-elimination-analysis" class="section level2">
-<h2><strong>Squid Game Elimination Analysis</strong></h2>
-<p><img
-src="https://img.shields.io/badge/Using-Tableau%20Software-red" /></p>
 <p><br></p>
-<p>🚨<strong>THIS IS A FICTIONAL PROJECT MEANT AS AN EXAMPLE FOR THE
-STEPBYSTAT COMMUNITY.</strong></p>
-<p><br><br><br></p>
-<div id="screenshot-of-dashboard" class="section level3">
-<h3>1. Screenshot of Dashboard</h3>
-<p align="center">
-<img src="images/squid_game.png" style="width:80%; border:0px solid; margin-right: 20px" align="center">
-</p>
-<p align="center">
-</p>
-<p><br><br><br></p>
-</div>
-<div id="summary" class="section level3">
-<h3>2. Summary</h3>
+<div id="publications" class="section level2">
+<h2>PUBLICATIONS</h2>
+<div id="journal-articles" class="section level3">
+<h3>Journal Articles</h3>
 <ul>
-<li>Squid Game is a South Korean survival drama television series
-streaming on Netflix.</li>
-<li>The series runs a contest where 456 players, and all of them are in
-debt, thereby playing multiple different types of children’s games.</li>
-<li>The players soon realize that being eliminated means death, and
-prize money accrued as more and more people die.</li>
-<li>Game 1 an extremely lethl version of Red Light, Green Light, where
-anyone caught moving is shot dead on the spot. It generated the most
-casualites, 255 people, as <code>elimination=death</code> rule was not
-informed to the players beforehand.</li>
+<li><p>Iruka, I. U., Sheridan, S., Koziol, N., Schumacher, R., Kerby,
+H., Prokasky, A., &amp; Choi, D.. (2022). Examining malleable factors
+that explain the end of kindergarten racial/ethnic gaps. Submitted to
+Elementary School Journal.</p></li>
+<li><p>Shin, S., Song, Y., Ha, J., Choi, D. (2017). The Relationship
+among Stress, Anger, and Problem Drinking in ex-prisoners in Korea.
+Korean Journal of Probation, 17(2). 197-230.</p></li>
+<li><p>Ha, J., Song, Y., Choi, D. (2017). Survey on Drinking Status of
+Ex-prisoners in Korea - Focused on Problem Drinking and Psychosocial
+Factors. Korean Offender Rehabilitation Studies, 3(1), 131-166.</p></li>
 </ul>
-<p><br><br><br></p>
 </div>
-<div id="tableau-public" class="section level3">
-<h3>3. Tableau Public</h3>
-<p>For more insights, please check my Tableau Public by clicking <a
-href="https://public.tableau.com/app/profile/davidhoskins/viz/SquidGameWARNINGMAJORSPOILERS/SquidGame">HERE</a>.</p>
+<div id="technical-reports" class="section level3">
+<h3>Technical Reports</h3>
+<ul>
+<li><p>Reichenberg, R. E., Choi, D., &amp; Nord, J., (2021). 4-H
+National Call for Data: College &amp; Career Readiness. Lincoln, NE:
+Nebraska Academy for Methodology, Analytics &amp;
+Psychometrics.</p></li>
+<li><p>Koziol, N., Choi, D., Nord, J., Howell Smith, M. C., &amp;
+Stevens, J. (2019). 4-H Common Measures 2.0 (CM 2.0): National Call for
+Data. Lincoln, NE: Nebraska Academy for Methodology, Analytics &amp;
+Psychometrics.</p></li>
+</ul>
 </div>
+<div id="manuscripts-under-review" class="section level3">
+<h3>Manuscripts under review</h3>
+<ul>
+<li><p>Babik, I., Cunha, A. B., Choi, D., Koziol, N., Harbourne, R.,
+Dusing, S., Westcott-McCoy, S., Bovaird, J., Willett, S., &amp; Lobo, M.
+A. (under review) The Effect of START-Play Intervention on
+Reaching-Related Exploratory Behaviors in Children with Neuromotor
+Delays: Randomized Controlled Trial. Submitted to Physical and
+Occupational Therapy in Pediatrics.</p></li>
+<li><p>Cunha, A. B., Babik, I., Choi, D., Koziol, N., Harbourne, R.,
+Dusing, S., Westcott-McCoy, S., Bovaird, J., Willett, S., &amp; Lobo, M.
+A. (under review) The Impact of Severity of Motor Delay, Timing of Task
+Mastery, and START-Play Intervention on the Development of Means-End
+Problem Solving in Young Children. Submitted to Research in
+Developmental Disabilities.</p></li>
+</ul>
+</div>
+</div>
+<div id="presentations" class="section level2">
+<h2>PRESENTATIONS</h2>
+<ul>
+<li><p>Jancart, K. L., Cunha, A. B., Babik, I., Choi, D., Koziol, N.,
+Harbourne, R., Lobo, M., McCoy, S., Willett, S., Bovaird, J., Dusing, S.
+(2022, September). Early versus late reaching mastery’s effect on object
+permanence in infants with motor delays receiving START-Play and usual
+care-early intervention. Paper will be presented at the 75th Annual
+Meeting of American Academy for Cerebral Palsy and Developmental
+Medicine, Las Vegas, Nevada, United States.</p></li>
+<li><p>Nugent, G., Chen, K. Soh, L. Choi, D., Trainin, G., Smith, W.
+(2022, July). Developing K-8 Computer Science Teachers’ Content
+Knowledge, Self-efficacy, and Attitudes through Evidence-based
+Professional Development. Paper presented at the 2022 ACM Conference on
+Innovation and Technology in Computer Science Education, Dublin.,
+Ireland.</p></li>
+<li><p>Babik, I., Cunha, A. B., Choi, D., Koziol, N., Hsu, L., Dusing,
+S., Harbourne, R., McCoy, S., Bovaird, J., Willett, S., Lobo, M. (2022,
+July). The role of affordances in the home environment in children’s
+motor, cognitive, and language development. Poster presented at the
+XXIII International Congress of Infant Studies (ICIS) 2022:
+Developmental Cascades, Westin, Ottawa, United States.</p></li>
+<li><p>Choi, D. &amp; Koziol, N. (2022, April). Testing Longitudinal
+Invariance of Parent Involvement in School using ECLS-K:2011. Poster
+presented at the 2022 CYFS Summit on Research in Early Childhood,
+Lincoln., Nebraska, United States.</p></li>
+<li><p>Cunha, A. B., Babik, I., Choi, D., Koziol, N., Harbourne, R.,
+McCoy, S., Bovaird, J., &amp; Lobo, M. (2021, April). Performance after
+mastery of means-end problem solving differs in children with mild
+versus significant motor delays. Poster presented at the Society for
+Research in Child Development Biennial Meeting, Virtual.</p></li>
+<li><p>Babik, I., Cunha, A. B., Choi, D., Koziol, N., Harbourne, R.,
+Dusing, S. C., McCoy, S. W., Bovaird, J., &amp; Lobo, M. A. (2021,
+February). START-Play intervention advanced reaching outcomes in
+children with significant but not mild motor delay. Paper presented to
+the Combined Sections Meeting of the American Physical Therapy
+Association, Virtual.</p></li>
+</ul>
 </div>
 
 
