--- a/contact.html
+++ b/contact.html
@@ -253,7 +253,7 @@ $(document).ready(function () {
   <a href="tutorials.html">Tutorials</a>
 </li>
 <li>
-  <a href="publication.html">Publication</a>
+  <a href="research.html">Research</a>
 </li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
