--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ $(document).ready(function () {
   <a href="tutorials.html">Tutorials</a>
 </li>
 <li>
-  <a href="publication.html">Publication</a>
+  <a href="research.html">Research</a>
 </li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -330,29 +330,31 @@ $(document).ready(function () {
 <img src="images/profile_pic.jpg" style="width:80%; border:0.5px solid; margin-right: 20px" align="center">
 </p>
 <p><br></p>
-<p>👋 Hello, my name is Dongho Choi. Please call me Tom.</p>
-<p>🎓 Soon to be grad with a M.S. in Data Science at ABC University.
-(May 2022)</p>
-<p>🌇 New York City Native, with a passion for developing and applying
-mathematical and statistical models to hands-on strategies that will
-grow business.</p>
-<p>📚 <strong>Talk about your past experience, your present experience,
-and what you did (about 4-5 sentences)</strong></p>
-<p>…</p>
-<p>💻 <strong>Talk about what you want to do in the future (2
-sentences)</strong></p>
-<p>e.g. 💻 As for my future, I hope to one day work as a data
-analyst/scientist/engineer role and work with a marketing team.</p>
-<p>🏔 <strong>Talk about hobbies(1 sentence)</strong></p>
-<p>e.g. 🏔In my free time, you can find me rock climbing.</p>
-<p>💪 <strong>Highlight your strengths, use keywords (5-6)</strong></p>
-<p>e.g. 💪 Specialties in analyzing customer-driven data from e-commerce
-and applying insights to actionable strategies</p>
+<p>👋 Hello, my name is <strong>Dongho Choi</strong>. Please call me
+<strong>Tom</strong>. 😊</p>
+<p>🎓 I earned a M.A. in Educational Psychology at the University of
+Nebraska-Lincoln (August 2022). I am getting a M.S. in Statistics as
+well (August 2023).</p>
+<p>💼 Currently working as a graduate research assistant at Nebraska
+Academy for Methodology, Analytics &amp; Psychometrics at UNL. I have
+participated in more than a dozen projects with a focus on child
+education and intervention projects. My responsibility in the projects
+includes, but is not limited to: Data cleaning, data management,
+statistical analysis, reporting the results, and supporting journal
+submission by writing and reviewing methods and results.</p>
+<p>💻 As for my future, I hope to one day work as a data
+analyst/statistician/researcher at schools and/or hospitals</p>
+<p>🔍 In my free time, I like watching detective dramas.</p>
+<p>💪 I have years of experience in educational data and longitudinal
+data analysis using latent variable models and generalized linear mixed
+models.</p>
 <ul>
-<li>Programming: Python, R</li>
-<li>Data visualization: Tableau Software, Power BI</li>
-<li>Database: SQL, Postgre SQL, MongoDB, Neo4j</li>
-<li>Cloud Computing: AWS, GCP (BigQuery), Azure</li>
+<li>Programming: R, SAS</li>
+<li>Statistical analysis: SPSS, Amos, Mplus, FlexMIRT</li>
+<li>Documentation: R markdown, Microsoft products (Excel, Word,
+PowerPoint, Outlook)</li>
+<li>Database: SQL</li>
+<li>Version control: Git, GitHub</li>
 </ul>
 
 
