--- a/research.html
+++ b/research.html
@@ -414,10 +414,12 @@ div.tocify {
 <div id="journal-articles" class="section level3">
 <h3>Journal Articles</h3>
 <ul>
-<li><p>Iruka, I. U., Sheridan, S., Koziol, N., Schumacher, R., Kerby,
-H., Prokasky, A., &amp; Choi, D.. (2022). Examining malleable factors
-that explain the end of kindergarten racial/ethnic gaps. Submitted to
-Elementary School Journal.</p></li>
+<li><p>Iruka, Sheridan, S., Koziol, N., Schumacher, R., Kerby, H.,
+Prokasky, A., &amp; Choi, D. (2022). Examining Malleable Factors That
+Explain the End-of-Kindergarten Racial/Ethnic Gaps. The Elementary
+School Journal, 122(3), 378–410. <a
+href="https://doi.org/10.1086/718072"
+class="uri">https://doi.org/10.1086/718072</a></p></li>
 <li><p>Shin, S., Song, Y., Ha, J., Choi, D. (2017). The Relationship
 among Stress, Anger, and Problem Drinking in ex-prisoners in Korea.
 Korean Journal of Probation, 17(2). 197-230.</p></li>
