--- a/contact.html
+++ b/contact.html
@@ -324,12 +324,16 @@ $(document).ready(function () {
 <link rel="stylesheet" href="site_libs/academicons-1.9.1/css/academicons.min.css"/></p>
 <p><br><br><br><br><br><br></p>
 <div id="dongho-choi" class="section level4">
-<h4><strong>Dongho Choi</strong></h4>
+<h4><strong>Dongho Choi</strong>
+<img src="images/college_logo.png" style="width:35%;" align="right"></h4>
 <div id="m.s.-candidate-in-statistics-unl" class="section level5">
-<h5>M.S. Candidate in Statistics | UNL
-<img src="images/college_logo.png" style="width:35%;" align="right"></h5>
-<p>😥😥😥😱😱 📍 Seoul <br> 📱 (123) 456 - 7890 <br> ✉️ <a
-href="mailto:jappleseed@abc.edu">jappleseed@abc.edu</a> <br></p>
+<h5>M.S. Candidate in Statistics | UNL</h5>
+</div>
+<div id="m.a.-in-educational-psychology-unl" class="section level5">
+<h5>M.A. in Educational Psychology | UNL</h5>
+<p>📍 4989 N 32nd Street, Lincoln, NE <br> 📱 (402) 875 - 3918 <br> ✉️
+<a href="mailto:tom.choi@huskers.unl.edu">tom.choi@huskers.unl.edu</a>
+<br></p>
 </div>
 </div>
 
