--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ $(document).ready(function () {
       <a href="visualization1.html">Squid Game Elimination Analysis</a>
     </li>
     <li>
-      <a href="dairy.html">Milk Production Data Exploration</a>
+      <a href="visualization2.html">Milk Production Data Exploration</a>
     </li>
   </ul>
 </li>
