--- a/stat1.html
+++ b/stat1.html
@@ -364,7 +364,7 @@ div.tocify {
       <a href="visualization1.html">Squid Game Elimination Analysis</a>
     </li>
     <li>
-      <a href="dairy.html">Milk Production Data Exploration</a>
+      <a href="visualization2.html">Milk Production Data Exploration</a>
     </li>
   </ul>
 </li>
