--- a/contact.html
+++ b/contact.html
@@ -256,7 +256,7 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="psm.html">Propensity Score Matching</a>
+      <a href="stat2.html">Propensity Score Matching</a>
     </li>
   </ul>
 </li>
