--- a/visualization1.html
+++ b/visualization1.html
@@ -337,7 +337,7 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="psm.html">Propensity Score Matching</a>
+      <a href="stat2.html">Propensity Score Matching</a>
     </li>
   </ul>
 </li>
