--- a/contact.html
+++ b/contact.html
@@ -262,6 +262,9 @@ $(document).ready(function () {
     <li>
       <a href="stat2.html">Propensity Score Matching</a>
     </li>
+    <li>
+      <a href="stat3.html">Structural Equation Modeling</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
