--- a/research.html
+++ b/research.html
@@ -343,6 +343,9 @@ div.tocify {
     <li>
       <a href="stat2.html">Propensity Score Matching</a>
     </li>
+    <li>
+      <a href="stat3.html">Structural Equation Modeling</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
