--- a/research.html
+++ b/research.html
@@ -405,6 +405,14 @@ div.tocify {
 <div id="journal-articles" class="section level3">
 <h3>Journal Articles</h3>
 <ul>
+<li><p>Babik, I., Cunha, A. B., <strong>Choi, D.</strong>, Koziol, N.,
+Harbourne, R., Dusing, S., Westcott-McCoy, S., Bovaird, J., Willett, S.,
+&amp; Lobo, M. A. (2022). The Effect of START-Play Intervention on
+Reaching-Related Exploratory Behaviors in Children with Neuromotor
+Delays: A Secondary Analysis of a Randomized Controlled Trial.
+<em>Physical &amp; Occupational Therapy In Pediatrics</em>. <a
+href="https://doi.org/10.1080/01942638.2022.2131501"
+class="uri">https://doi.org/10.1080/01942638.2022.2131501</a></p></li>
 <li><p>Iruka, I., Sheridan, S., Koziol, N., Schumacher, R., Kerby, H.,
 Prokasky, A., &amp; <strong>Choi, D.</strong> (2022). Examining
 Malleable Factors That Explain the End-of-Kindergarten Racial/Ethnic
@@ -423,6 +431,10 @@ Studies</em>, 3(1), 131-166.</p></li>
 <div id="technical-reports" class="section level3">
 <h3>Technical Reports</h3>
 <ul>
+<li><p>Nord, J., &amp; <strong>Choi, D.</strong> (2022). <em>4-H
+National Call for Data College &amp; Career Readiness.</em> Lincoln, NE:
+Nebraska Academy for Methodology, Analytics &amp;
+Psychometrics.</p></li>
 <li><p>Reichenberg, R. E., <strong>Choi, D.</strong>, &amp; Nord, J.,
 (2021). <em>4-H National Call for Data: College &amp; Career
 Readiness</em>. Lincoln, NE: Nebraska Academy for Methodology, Analytics
@@ -436,12 +448,6 @@ Methodology, Analytics &amp; Psychometrics.</p></li>
 <div id="manuscripts-under-review" class="section level3">
 <h3>Manuscripts Under Review</h3>
 <ul>
-<li><p>Babik, I., Cunha, A. B., <strong>Choi, D.</strong>, Koziol, N.,
-Harbourne, R., Dusing, S., Westcott-McCoy, S., Bovaird, J., Willett, S.,
-&amp; Lobo, M. A. (under review) The Effect of START-Play Intervention
-on Reaching-Related Exploratory Behaviors in Children with Neuromotor
-Delays: Randomized Controlled Trial. Submitted to <em>Physical and
-Occupational Therapy in Pediatrics</em>.</p></li>
 <li><p>Cunha, A. B., Babik, I., <strong>Choi, D.</strong>, Koziol, N.,
 Harbourne, R., Dusing, S., Westcott-McCoy, S., Bovaird, J., Willett, S.,
 &amp; Lobo, M. A. (under review) The Impact of Severity of Motor Delay,
